Update table design

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <table class="mb4 wf bn f6 lhc">
           <thead class="al">
             <tr>
-              <th>ID</th>
-              <th>Time</th>
-              <th>Sector</th>
-              <th>Project</th>
-              <th>Description</th>
+              <th class="fwn">ID</th>
+              <th class="fwn">Time</th>
+              <th class="fwn">Sector</th>
+              <th class="fwn">Project</th>
+              <th class="fwn">Description</th>
             </tr>
           </thead>
           <tbody>
@@ -318,12 +318,12 @@
             <table class="wf bn">
               <thead>
                 <tr class="f6 al">
-                  <th class="pl0">ID</th>
-                  <th>Date</th>
-                  <th>Time</th>
-                  <th>Duration</th>
-                  <th>Project</th>
-                  <th class="pr0">Description</th>
+                  <th class="pl0 fwn">ID</th>
+                  <th class="fwn">Date</th>
+                  <th class="fwn">Time</th>
+                  <th class="fwn">Duration</th>
+                  <th class="fwn">Project</th>
+                  <th class="pr0 fwn">Description</th>
                 </tr>
               </thead>
               <tbody id="secLogbook" class="nodrag f6"></tbody>
@@ -419,12 +419,12 @@
             <table class="wf bn">
               <thead>
                 <tr class="f6 al">
-                  <th class="pl0">ID</th>
-                  <th>Date</th>
-                  <th>Time</th>
-                  <th>Duration</th>
-                  <th>Sector</th>
-                  <th class="pr0">Description</th>
+                  <th class="pl0 fwn">ID</th>
+                  <th class="fwn">Date</th>
+                  <th class="fwn">Time</th>
+                  <th class="fwn">Duration</th>
+                  <th class="fwn">Sector</th>
+                  <th class="pr0 fwn">Description</th>
                 </tr>
               </thead>
               <tbody id="proLogbook" class="nodrag f6"></tbody>
@@ -472,13 +472,13 @@
     <table class="wf bn">
       <thead>
         <tr class="f6 al">
-          <th class="pl0">ID</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Duration</th>
-          <th>Sector</th>
-          <th>Project</th>
-          <th class="pr0">Description</th>
+          <th class="pl0 fwn">ID</th>
+          <th class="fwn">Date</th>
+          <th class="fwn">Time</th>
+          <th class="fwn">Duration</th>
+          <th class="fwn">Sector</th>
+          <th class="fwn">Project</th>
+          <th class="pr0 fwn">Description</th>
         </tr>
       </thead>
       <tbody id="logbook" class="nodrag f6"></tbody>
