--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,11 @@
         <table class="mb4 wf bn f6 lhc">
           <thead class="al">
             <tr>
-              <th class="fwn">ID</th>
-              <th class="fwn">Time</th>
-              <th class="fwn">Sector</th>
-              <th class="fwn">Project</th>
-              <th class="fwn">Description</th>
+              <th class="fwn pb1">ID</th>
+              <th class="fwn pb1">Time</th>
+              <th class="fwn pb1">Sector</th>
+              <th class="fwn pb1">Project</th>
+              <th class="fwn pb1">Description</th>
             </tr>
           </thead>
           <tbody>
@@ -321,7 +321,7 @@
                   <th class="pl0 fwn">ID</th>
                   <th class="fwn">Date</th>
                   <th class="fwn">Time</th>
-                  <th class="fwn">Duration</th>
+                  <th class="fwn">Span (h)</th>
                   <th class="fwn">Project</th>
                   <th class="pr0 fwn">Description</th>
                 </tr>
@@ -422,7 +422,7 @@
                   <th class="pl0 fwn">ID</th>
                   <th class="fwn">Date</th>
                   <th class="fwn">Time</th>
-                  <th class="fwn">Duration</th>
+                  <th class="fwn">Span (h)</th>
                   <th class="fwn">Sector</th>
                   <th class="pr0 fwn">Description</th>
                 </tr>
@@ -475,7 +475,7 @@
           <th class="pl0 fwn">ID</th>
           <th class="fwn">Date</th>
           <th class="fwn">Time</th>
-          <th class="fwn">Duration</th>
+          <th class="fwn">Span (h)</th>
           <th class="fwn">Sector</th>
           <th class="fwn">Project</th>
           <th class="pr0 fwn">Description</th>
@@ -710,7 +710,7 @@
   <script src="js/vis.js"></script>
   <script src="js/time.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/test.js"></script>
+  <!-- <script src="js/test.js"></script> -->
 
   <script>
     const {dialog, app} = require('electron').remote
