--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
   <title>Log</title>
   <meta name="author" content="Josh Avanier">
   <meta name="description" content="A log and time-tracking system">
   <link rel="stylesheet" href="css/macian.min.css">
 </head>
-<body id="app" class="noselect r p4 p4-m p5-l hf cn c-d">
+<body id="ui" class="noselect r p4 p4-m p5-l hf cn c-d">
 
   <header class="mb4 f6 lhc">
     <h1 class="dib mr3 f5 upc tk">Log <span id="version"></span></h1>
@@ -560,13 +559,48 @@
   </div>
 
   <div id="gui" class="dn sect wf r h9-l f6 lhc oya">
-    <div class="nodrag mb5 mb0-l c6 pr4-l hf-l oya-l">
+    <div class="nodrag mb5 mb0-l c2 br pr4-l hf-l oya-l">
+      <h2 class="mb3 f5">Contents</h2>
+
+      <ul class="lsn">
+        <li class="fwb mb3">Console</li>
+        <li><a href="#starting">Starting</a></li>
+        <li><a href="#stopping">Stopping</a></li>
+        <li class="mb3"><a href="#pausing">Pausing</a></li>
+        <li><a href="#editing">Editing</a></li>
+        <li class="mb3"><a href="#deleting">Deleting</a></li>
+        <li class="mb3"><a href="#customising">Customising</a></li>
+        <li class="mb3"><a href="#import">Import/Export</a></li>
+        <li class="mb4"><a href="#shortcuts">Shortcuts</a></li>
+
+        <li class="fwb mb3">Terminology</li>
+        <li><a href="#shortcuts">Sectors</a></li>
+        <li class="mb3"><a href="#shortcuts">Projects</a></li>
+
+        <li class="mb3"><a href="#statistics">Statistics</a></li>
+
+        <li>Charts</li>
+        <li><a href="#shortcuts">Overview</a></li>
+        <li><a href="#shortcuts">Peak Times</a></li>
+        <li><a href="#shortcuts">Focus Chart</a></li>
+        <li class="mb4"><a href="#shortcuts">Visualisation</a></li>
+
+        <li class="mb4"><a href="#shortcuts">Journal</a></li>
+
+        <li class="fwb mb3">About</li>
+        <li><a href="#contributions">Contribution</a></li>
+        <li><a href="#credits">Credits</a></li>
+      </ul>
+    </div>
+
+    <div class="nodrag mb5 mb0-l ca pl4-l hf-l oya-l">
       <h2 class="mb3 f5">Guide</h2>
 
-      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity and stop at any time.</p>
+      <p class="mb4 m">The Log is designed for single-tasking. When you start a log, focus on your activity and stop at any time.</p>
 
-      <h3 class="mb3 f5">Console</h3>
       <p class="mb4 m">Use the console to enter commands. The console is summoned when you start typing. Here are a list of available commands:</p>
+
+      <h3 id="starting" class="mb3 f5">Starting Log Entries</h3>
 
       <p class="mb3 m">To start a log, you may do so in a few different ways. Choose the one you find convenient:</p>
       <div class="mb4 bl pl3 m">
@@ -576,18 +610,24 @@
         <p>start Sector | Title | Description</p>
       </div>
 
-      <p class="mb4 m">A <b>Sector</b> defines an activity type. A <b>Project</b> can involve one or more Sectors. For example, let's say you're working on an app project. This project may involve Design, Code, and Research sectors.</p>
+      <p class="mb4 m">If you start a log without ending an ongoing previous session, that session will be automatically stopped before opening a new session.
+
+      <h3 id="stopping" class="mb3 f5">Stopping Log Entries</h3>
 
       <p class="mb3 m">To stop logging:</p>
       <div class="mb4 bl pl3 m">
         <p>stop</p>
       </div>
 
+      <h3 id="pausing" class="mb3 f5">Pausing Log Entries</h3>
+
       <p class="mb3 m">If you want pause logging temporarily, and resume logging from where you left off previously:</p>
       <div class="mb4 bl pl3 m">
         <p>pause <span class="o8">// stops your current log session</span></p>
         <p>resume <span class="o8">// resumes the last log session</span></p>
       </div>
+
+      <h3 id="editing" class="mb3 f5">Editing Log Entries</h3>
 
       <p class="mb3 m">To edit a log entry, use its ID (shown in Entries):</p>
       <div class="mb4 bl pl3 m">
@@ -600,30 +640,36 @@
         <p>edit 4 duration "90" <span class="o8">// sets duration in minutes</span></p>
       </div>
 
+      <h3 id="deleting" class="mb3 f5">Deleting</h3>
+
       <p class="mb3 m">To delete a log entry, use its ID:</p>
       <div class="mb4 bl pl3 m">
         <p>delete 15 <span class="o8">// deletes entry #15</span></p>
       </div>
 
-	  <p class="mb3 m">To delete a sector or project, use its name:</p>
+      <p class="mb3 m">To delete a sector or project, use its name:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">delete sector Code <span class="o8">// deletes all Code entries</span></p>
 		<p>delete project Fishing <span class="o8">// deletes all Fishing entries</span></p>
       </div>
 
-      <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
+      <h3 id="customising" class="mb3 f5">Customising</h3>
+
+      <p class="mb3 m">To change the interface's background colour, choose a hexadecimal colour or an HTML colour name:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set background #aabbcc</p>
         <p>set background aquamarine</p>
       </div>
 
-      <p class="mb3 m">To change the interface's text colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
+      <p class="mb3 m">To change the interface's text colour, choose a hexadecimal colour or an HTML colour name:</p>
       <div class="mb4 bl pl3 m">
-        <p class="mb2">set color #112233</p>
-        <p>set color black</p>
+        <p class="mb2">set colour #112233</p>
+        <p>set colour black</p>
       </div>
 
-      <p class="mb3 m">To change the interface's accent colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
+      <p class="mb3 m">The accent is what indicates the current hour and day
+      in the peak time charts. To change the it, choose a
+      hexadecimal colour or an HTML colour name:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set accent #ac1d1c</p>
         <p>set accent red</p>
@@ -666,6 +712,8 @@
         <p>set time 24</p>
       </div>
 
+      <h3 id="import" class="mb3 f5">Import/Export</h3>
+
       <p class="mb3 m">If you have an existing data file (JSON), you can import it:</p>
       <div class="mb4 bl pl3 m">
         <p>import</p>
@@ -676,14 +724,84 @@
         <p>export</p>
       </div>
 
-	  <p class="mb3 m">To quit:</p>
-      <div class="bl pl3 m">
+      <p class="mb3 m">To quit:</p>
+      <div class="mb4 bl pl3 m">
         <p>quit</p>
       </div>
 
-    </div>
+      <h3 id="terminology" class="mb3 f5">Terminology</h3>
 
-    <div class="nodrag mb5 mb0-l c6 pl4-l hf-l oya-l">
+      <p class="mb4 m">A <b>Sector</b> defines an activity type. A <b>Project</b> can involve one or more Sectors. For example, an app project may involve Design, Code, and Research sectors.</p>
+
+      <h3 id="statistics" class="mb3 f5">Statistics</h3>
+
+      <p class="mb4 m">The Stats provide information about your log activity.</p>
+
+      <dl class="mb4 m">
+        <dt class="fwb">Logged Hours (LH)</dt>
+        <dd class="mb3">The number of hours logged</dd>
+
+        <dt class="fwb">Min Session (LHn)</dt>
+        <dd class="mb3">The duration of the shortest log session</dd>
+
+        <dt class="fwb">Max Session (LHx)</dt>
+        <dd class="mb3">The duration of the longest log session</dd>
+
+        <dt class="fwb">Avg Session (Lha)</dt>
+        <dd class="mb3">The average duration of your log sessions. In the Overview, the Lha shown is for the day. Historical Lha is found in the Details</dd>
+
+        <dt class="fwb">Log Percentage</dt>
+        <dd class="mb3">How much of a time period has been logged. For example, a Log Percentage of 50% means half of your day was logged.</dd>
+
+        <dt class="fwb">Focus</dt>
+        <dd class="mb3">Focus shows how much of your time was spent on Sectors or Projects. For example, a 0.50 focus means your time was split between 2 projects. By default, Focus is calculated for projects but in the case of the Project view in the Details, Sector Focus is calculated.</dd>
+
+        <dt class="fwb">Entries</dt>
+        <dd class="mb3">The number of log entries</dd>
+
+        <dt class="fwb">Streak</dt>
+        <dd class="mb3">Desc</dd>
+
+        <dt class="fwb">Daily Average</dt>
+        <dd class="mb3">The average daily logged hours</dd>
+
+        <dt class="fwb">Sectors</dt>
+        <dd class="mb3">Number of sectors</dd>
+
+        <dt class="fwb">Projects</dt>
+        <dd class="mb3">Number of projects</dd>
+
+        <dt class="fwb">Peak Hour</dt>
+        <dd class="mb3">Most productive hour of the day</dd>
+
+        <dt class="fwb">Sectors</dt>
+        <dd>Most productive day of the week</dd>
+      </dl>
+
+      <h3 id="charts" class="mb3 f5">Charts</h3>
+
+      <p class="mb4 m">A <b>Sector</b> defines an activity type. A <b>Project</b> can involve one or more Sectors. For example, an app project may involve Design, Code, and Research sectors.</p>
+
+      <dl class="mb4 m">
+        <dt class="fwb">Peak Hour Chart</dt>
+        <dd class="mb3">Shows your peak times from 00:00 to 23:00. The current hour is highlighted</dd>
+
+        <dt class="fwb">Peak Day Chart</dt>
+        <dd class="mb3">Shows your peak times from Sunday to Saturday. The current day is highlighted</dd>
+
+        <dt class="fwb">Day Chart</dt>
+        <dd class="mb3">Shows a timeline of the current day and its activities</dd>
+
+        <dt class="fwb">Overview Chart</dt>
+        <dd class="mb3">Shows data from the past number of days. In the Details, these charts are filtered by Sector and Project</dd>
+
+        <dt class="fwb">Focus Chart</dt>
+        <dd class="mb3">Shows focus data from the past number of days</dd>
+
+        <dt class="fwb">Visualisation</dt>
+        <dd>An alternative view of the data from the past number of days. Each row is a day that spans from midnight to midnight.</dd>
+      </dl>
+
       <h2 class="mb3 f5">Log</h2>
       <p class="mb4 m">Log is a log and time-tracking system. Its primary purpose is to provide insight to how one's time is spent to optimise personal productivity and better manage time.</p>
 
@@ -693,13 +811,12 @@
 
       <p class="mb3 m">If you have any thoughts, comments, suggestions, questions, or if you simply want to say hello:</p>
       <p class="bl pl3 mb4 m">Twitter: @joshavanier</p>
-      <p class="mb3">Thank you for taking the time to try this out.</p>
       <p>&mdash; Josh</p>
     </div>
   </div>
 
   <form id="cmd" class="dn psf b0 l0 wf f6 z9" action="#" onsubmit="return false;" autocomplete="off" spellcheck="false">
-    <input id="console" type="text" class="wf bg-0 blanc on bn p3" autofocus="autofocus" placeholder="Log.console" />
+    <input id="con" type="text" class="wf bg-0 blanc on bn p3" autofocus="autofocus" placeholder="Log.console" />
   </form>
 
   <script src="js/utils.js"></script>
@@ -718,10 +835,6 @@
     const ipcRenderer = require('electron').ipcRenderer
     const Store = require('./js/store.js')
     const path = require('path')
-    const timer = require('headless-work-timer')
-    const Aequirys = require('aequirys')
-    const Monocal = require('./utils/monocal.min.js')
-    const Desamber = require('./utils/desamber.js')
 
     write('version', app.getVersion())
 
