--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body id="ui" class="noselect r p4 p4-m p5-l hf cn c-d">
 
   <header class="mb4 f6 lhc">
-    <h1 class="dib mr3 f5 upc tk">Log <span id="version"></span></h1>
+    <h1 class="dib mr3 f5 upc tk">Log <span id="ver"></span></h1>
     <button id="b-ovw" class="pv1 tab on bg-cl of mr3" onclick="Log.tab('ovw', 'sect', 'tab')">Overview</button>
     <button id="b-lis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('lis', 'sect', 'tab')">Details</button>
     <button id="b-vis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('vis', 'sect', 'tab')">Visualisation</button>
@@ -22,32 +22,8 @@
 
   <div id="ovw" class="sect h9">
     <div class="h1">
-      <div class="mb3 psr wf sh2 bl br">
-        <div class="psa h5 br o5" style="left: 4.17%"></div>
-        <div class="psa hf br o7" style="left: 8.33%"></div>
-        <div class="psa h5 br o5" style="left:12.50%"></div>
-        <div class="psa hf br o7" style="left:16.67%"></div>
-        <div class="psa h5 br o5" style="left:20.83%"></div>
-        <div class="psa hf br o7" style="left:25.00%"></div>
-        <div class="psa h5 br o5" style="left:29.17%"></div>
-        <div class="psa hf br o7" style="left:33.33%"></div>
-        <div class="psa h5 br o5" style="left:37.50%"></div>
-        <div class="psa hf br o7" style="left:41.67%"></div>
-        <div class="psa h5 br o5" style="left:45.83%"></div>
-        <div class="psa hf br o7" style="left:50.00%"></div>
-        <div class="psa h5 br o5" style="left:54.17%"></div>
-        <div class="psa hf br o7" style="left:58.33%"></div>
-        <div class="psa h5 br o5" style="left:62.50%"></div>
-        <div class="psa hf br o7" style="left:66.67%"></div>
-        <div class="psa h5 br o5" style="left:70.83%"></div>
-        <div class="psa hf br o7" style="left:75.00%"></div>
-        <div class="psa h5 br o5" style="left:79.17%"></div>
-        <div class="psa hf br o7" style="left:83.33%"></div>
-        <div class="psa h5 br o5" style="left:87.50%"></div>
-        <div class="psa hf br o7" style="left:91.67%"></div>
-        <div class="psa h5 br o5" style="left:95.83%"></div>
-      </div>
-      <div id="dayChart" class="psr wf sh2"></div>
+      <div id="ovwMeter" class="mb3 psr wf sh2 bl br"></div>
+      <div id="dyc" class="psr wf sh2"></div>
     </div>
 
     <div class="h9 r oyh">
@@ -93,7 +69,7 @@
           </tbody>
         </table>
 
-        <div id="weekChart" class="mb4 psr h4"></div>
+        <div id="ovc" class="mb4 psr h4"></div>
 
         <ul class="mb4 lsn f6 lhc r">
           <li class="mb3 c6 c3-m c3-l">
@@ -149,7 +125,6 @@
 
     <div class="cb pl4-l hf-l">
       <div id="sum" class="nodrag subsect hf oya">
-        <h3 class="mb3 f6 fwn">Statistics</h3>
 
         <ul class="mb4 lsn f6 lhc r">
           <li class="mb4 c6 c3-m c3-l">
@@ -200,14 +175,13 @@
 
         <h3 class="mb3 f6 fwn">Peaks</h3>
         <div class="dib mb4-l pr4-l lf h3 w5">
-          <div id="peakTimesHistory" class="psr hf wf"></div>
+          <div id="pth" class="psr hf wf"></div>
         </div>
         <div class="dib mb4-l pl4-l lf h3 w5">
-          <div id="peakDaysHistory" class="psr hf wf"></div>
+          <div id="pdh" class="psr hf wf"></div>
         </div>
 
         <h3 class="mb3 f6 fwn">Focus</h3>
-
         <div id="focusChart" class="psr mb4 wf sh5"></div>
 
         <ul class="mb4 lsn f6 lhc r">
@@ -227,9 +201,7 @@
         </ul>
 
         <h3 class="mb3 f6 fwn">Sector Focus</h3>
-
         <div id="sectorFocusBar" class="mb3 wf sh2"></div>
-
         <ul id="sectorLegendSummary" class="lsn r"></ul>
       </div>
 
@@ -309,30 +281,25 @@
 
             <h3 class="mb3 f6 fwn">Sector Focus</h3>
             <div id="projectDetailFocus" class="mb3 wf sh2"></div>
-
             <ul id="projectLegend" class="lsn r"></ul>
           </div>
 
-          <div id="secEnt" class="dn secsect">
-            <table class="wf bn">
-              <thead>
-                <tr class="f6 al">
-                  <th class="pl0 fwn">ID</th>
-                  <th class="fwn">Date</th>
-                  <th class="fwn">Time</th>
-                  <th class="fwn">Span (h)</th>
-                  <th class="fwn">Project</th>
-                  <th class="pr0 fwn">Description</th>
-                </tr>
-              </thead>
-              <tbody id="secLogbook" class="nodrag f6"></tbody>
-            </table>
-          </div>
+          <table id="secEnt" class="dn secsect wf bn">
+            <thead>
+              <tr class="f6 al">
+                <th class="pl0 fwn">ID</th>
+                <th class="fwn">Date</th>
+                <th class="fwn">Time</th>
+                <th class="fwn">Duration</th>
+                <th class="fwn">Project</th>
+                <th class="pr0 fwn">Description</th>
+              </tr>
+            </thead>
+            <tbody id="secLogbook" class="nodrag f6"></tbody>
+          </table>
         </div>
 
-        <div class="c3 pl4-l hf-l oya-l">
-          <ul id="sectorsList" class="nodrag lsn f6 lhc"></ul>
-        </div>
+        <ul id="sectorsList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
       </div>
 
       <div id="pro" class="dn subsect hf r">
@@ -414,56 +381,28 @@
             <ul id="sectorLegend" class="lsn r"></ul>
           </div>
 
-          <div id="proEnt" class="dn prosect">
-            <table class="wf bn">
-              <thead>
-                <tr class="f6 al">
-                  <th class="pl0 fwn">ID</th>
-                  <th class="fwn">Date</th>
-                  <th class="fwn">Time</th>
-                  <th class="fwn">Span (h)</th>
-                  <th class="fwn">Sector</th>
-                  <th class="pr0 fwn">Description</th>
-                </tr>
-              </thead>
-              <tbody id="proLogbook" class="nodrag f6"></tbody>
-            </table>
-          </div>
+          <table id="proEnt" class="dn prosect wf bn">
+            <thead>
+              <tr class="f6 al">
+                <th class="pl0 fwn">ID</th>
+                <th class="fwn">Date</th>
+                <th class="fwn">Time</th>
+                <th class="fwn">Duration</th>
+                <th class="fwn">Sector</th>
+                <th class="pr0 fwn">Description</th>
+              </tr>
+            </thead>
+            <tbody id="proLogbook" class="nodrag f6"></tbody>
+          </table>
         </div>
 
-        <div class="c3 pl4-l hf-l oya-l">
-          <ul id="projectsList" class="nodrag lsn f6 lhc"></ul>
-        </div>
+        <ul id="projectsList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
       </div>
     </div>
   </div>
 
   <div id="vis" class="nodrag dn sect h9 oya">
-    <div class="psr wf sh2 bl br">
-      <div class="psa h5 br o5" style="left: 4.17%"></div>
-      <div class="psa hf br o7" style="left: 8.33%"></div>
-      <div class="psa h5 br o5" style="left:12.50%"></div>
-      <div class="psa hf br o7" style="left:16.67%"></div>
-      <div class="psa h5 br o5" style="left:20.83%"></div>
-      <div class="psa hf br o7" style="left:25.00%"></div>
-      <div class="psa h5 br o5" style="left:29.17%"></div>
-      <div class="psa hf br o7" style="left:33.33%"></div>
-      <div class="psa h5 br o5" style="left:37.50%"></div>
-      <div class="psa hf br o7" style="left:41.67%"></div>
-      <div class="psa h5 br o5" style="left:45.83%"></div>
-      <div class="psa hf br o7" style="left:50.00%"></div>
-      <div class="psa h5 br o5" style="left:54.17%"></div>
-      <div class="psa hf br o7" style="left:58.33%"></div>
-      <div class="psa h5 br o5" style="left:62.50%"></div>
-      <div class="psa hf br o7" style="left:66.67%"></div>
-      <div class="psa h5 br o5" style="left:70.83%"></div>
-      <div class="psa hf br o7" style="left:75.00%"></div>
-      <div class="psa h5 br o5" style="left:79.17%"></div>
-      <div class="psa hf br o7" style="left:83.33%"></div>
-      <div class="psa h5 br o5" style="left:87.50%"></div>
-      <div class="psa hf br o7" style="left:91.67%"></div>
-      <div class="psa h5 br o5" style="left:95.83%"></div>
-    </div>
+    <div id="visMeter" class="psr wf sh2 bl br"></div>
     <div id="visual" class="nodrag mt4 h9 oya"></div>
   </div>
 
@@ -474,7 +413,7 @@
           <th class="pl0 fwn">ID</th>
           <th class="fwn">Date</th>
           <th class="fwn">Time</th>
-          <th class="fwn">Span (h)</th>
+          <th class="fwn">Duration</th>
           <th class="fwn">Sector</th>
           <th class="fwn">Project</th>
           <th class="pr0 fwn">Description</th>
@@ -485,75 +424,45 @@
   </div>
 
   <div id="jou" class="dn sect wf h9 oya">
-    <div class="nodrag c1 hf-l oya-l">
-      <ul id="journalNav" class="lsn f6 lhc"></ul>
-    </div>
+    <ul id="jNav" class="nodrag c1 hf-l oya-l lsn f6 lhc"></ul>
 
     <div class="nodrag cb pl2-l hf-l oya-l">
       <h2 id="journalDate" class="mb4 f5">Journal</h2>
 
       <div class="mb4 ph1">
-        <div class="mb3 psr wf sh2 bl br">
-          <div class="psa h5 br o5" style="left: 4.17%"></div>
-          <div class="psa hf br o7" style="left: 8.33%"></div>
-          <div class="psa h5 br o5" style="left:12.50%"></div>
-          <div class="psa hf br o7" style="left:16.67%"></div>
-          <div class="psa h5 br o5" style="left:20.83%"></div>
-          <div class="psa hf br o7" style="left:25.00%"></div>
-          <div class="psa h5 br o5" style="left:29.17%"></div>
-          <div class="psa hf br o7" style="left:33.33%"></div>
-          <div class="psa h5 br o5" style="left:37.50%"></div>
-          <div class="psa hf br o7" style="left:41.67%"></div>
-          <div class="psa h5 br o5" style="left:45.83%"></div>
-          <div class="psa hf br o7" style="left:50.00%"></div>
-          <div class="psa h5 br o5" style="left:54.17%"></div>
-          <div class="psa hf br o7" style="left:58.33%"></div>
-          <div class="psa h5 br o5" style="left:62.50%"></div>
-          <div class="psa hf br o7" style="left:66.67%"></div>
-          <div class="psa h5 br o5" style="left:70.83%"></div>
-          <div class="psa hf br o7" style="left:75.00%"></div>
-          <div class="psa h5 br o5" style="left:79.17%"></div>
-          <div class="psa hf br o7" style="left:83.33%"></div>
-          <div class="psa h5 br o5" style="left:87.50%"></div>
-          <div class="psa hf br o7" style="left:91.67%"></div>
-          <div class="psa h5 br o5" style="left:95.83%"></div>
-        </div>
-        <div id="journalDay" class="mb3 psr wf sh2"></div>
+        <div id="jMeter" class="mb3 psr wf sh2 bl br"></div>
+        <div id="jDyc" class="mb3 psr wf sh2"></div>
       </div>
 
       <div class="r h7">
-        <div class="c8 pr4-l hf oya">
-          <ul id="journalEntries" class="lsn"></ul>
-        </div>
+        <ul id="jEnt" class="c8 pr4-l hf oya lsn"></ul>
 
-        <div class="c4 pl4-l">
-          <ul class="lsn f6 lhc r">
-            <li class="mb4 c6">
-              <p id="jLHT" class="f4 fwb">&ndash;</p>
-              <p class="o9">Logged Hours</p>
-            </li>
-            <li class="mb4 c6">
-              <p id="jLSN" class="f4 fwb">&ndash;</p>
-              <p class="o9">Min Session</p>
-            </li>
-            <li class="mb4 c6">
-              <p id="jLSX" class="f4 fwb">&ndash;</p>
-              <p class="o9">Max Session</p>
-            </li>
-            <li class="mb4 c6">
-              <p id="jASDT" class="f4 fwb">&ndash;</p>
-              <p class="o9">Avg Session</p>
-            </li>
-            <li class="mb4 mb0-l c6">
-              <p id="jLPT" class="f4 fwb">&ndash;</p>
-              <p class="o9">Log Percentage</p>
-            </li>
-            <li class="mb4 mb0-l c6">
-              <p id="jfocusToday" class="f4 fwb">&ndash;</p>
-              <p class="o9">Focus</p>
-            </li>
-          </ul>
-        </div>
+        <ul class="c4 pl4-l lsn f6 lhc r">
+          <li class="mb4 c6">
+            <p id="jLHT" class="f4 fwb">&ndash;</p>
+            <p class="o9">Logged Hours</p>
+          </li>
+          <li class="mb4 c6">
+            <p id="jLSN" class="f4 fwb">&ndash;</p>
+            <p class="o9">Min Session</p>
+          </li>
+          <li class="mb4 c6">
+            <p id="jLSX" class="f4 fwb">&ndash;</p>
+            <p class="o9">Max Session</p>
+          </li>
+          <li class="mb4 c6">
+            <p id="jASDT" class="f4 fwb">&ndash;</p>
+            <p class="o9">Avg Session</p>
+          </li>
+          <li class="mb4 mb0-l c6">
+            <p id="jLPT" class="f4 fwb">&ndash;</p>
+            <p class="o9">Log Percentage</p>
+          </li>
+          <li class="mb4 mb0-l c6">
+            <p id="jFT" class="f4 fwb">&ndash;</p>
+            <p class="o9">Focus</p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
@@ -820,7 +729,7 @@
   </form>
 
   <script src="js/utils.js"></script>
-  <script src="js/drop.js"></script>
+  <!-- <script src="js/drop.js"></script> -->
   <script src="js/log.js"></script>
   <script src="js/options.js"></script>
   <script src="js/console.js"></script>
@@ -832,11 +741,11 @@
   <script>
     const {dialog, app} = require('electron').remote
     const fs = require('fs')
-    const ipcRenderer = require('electron').ipcRenderer
+    // const ipcRenderer = require('electron').ipcRenderer
     const Store = require('./js/store.js')
     const path = require('path')
 
-    write('version', app.getVersion())
+    ver.innerHTML = app.getVersion()
 
     let dataPath = ''
 
