--- a/src/index.html
+++ b/src/index.html
@@ -424,47 +424,57 @@
   </div>
 
   <div id="jou" class="dn sect wf h9 oya">
-    <ul id="jNav" class="nodrag c1 hf-l oya-l lsn f6 lhc"></ul>
 
-    <div class="nodrag cb pl2-l hf-l oya-l">
-      <h2 id="journalDate" class="mb4 f5">Journal</h2>
+    <div class="pb4 h3 wf oya pr1">
+      <table id="cal" class="nodrag wf f6 lhc c-pt">
+        <tbody></tbody>
+      </table>
+    </div>
 
-      <div class="mb4 ph1">
-        <div id="jMeter" class="mb3 psr wf sh2 bl br"></div>
-        <div id="jDyc" class="mb3 psr wf sh2"></div>
-      </div>
+    <div class="h7">
+      <ul id="jNav" class="dn nodrag c2 hf-l oya-l lsn f6 lhc"></ul>
+      <div class="nodrag hf-l oya-l">
 
-      <div class="r h7">
-        <ul id="jEnt" class="c8 pr4-l hf oya lsn"></ul>
+        <h2 id="journalDate" class="mb4 f5">Journal</h2>
 
-        <ul class="c4 pl4-l lsn f6 lhc r">
-          <li class="mb4 c6">
-            <p id="jLHT" class="f4 fwb">&ndash;</p>
-            <p class="o9">Logged Hours</p>
-          </li>
-          <li class="mb4 c6">
-            <p id="jLSN" class="f4 fwb">&ndash;</p>
-            <p class="o9">Min Session</p>
-          </li>
-          <li class="mb4 c6">
-            <p id="jLSX" class="f4 fwb">&ndash;</p>
-            <p class="o9">Max Session</p>
-          </li>
-          <li class="mb4 c6">
-            <p id="jASDT" class="f4 fwb">&ndash;</p>
-            <p class="o9">Avg Session</p>
-          </li>
-          <li class="mb4 mb0-l c6">
-            <p id="jLPT" class="f4 fwb">&ndash;</p>
-            <p class="o9">Log Percentage</p>
-          </li>
-          <li class="mb4 mb0-l c6">
-            <p id="jFT" class="f4 fwb">&ndash;</p>
-            <p class="o9">Focus</p>
-          </li>
-        </ul>
+        <div class="mb4 ph1">
+          <div id="jMeter" class="mb3 psr wf sh2 bl br"></div>
+          <div id="jDyc" class="mb3 psr wf sh2"></div>
+        </div>
+
+        <div class="r h7">
+          <ul id="jEnt" class="c8 pr4-l hf oya lsn"></ul>
+
+          <ul class="c4 pl4-l lsn f6 lhc r">
+            <li class="mb4 c6">
+              <p id="jLHT" class="f4 fwb">&ndash;</p>
+              <p class="o9">Logged Hours</p>
+            </li>
+            <li class="mb4 c6">
+              <p id="jLSN" class="f4 fwb">&ndash;</p>
+              <p class="o9">Min Session</p>
+            </li>
+            <li class="mb4 c6">
+              <p id="jLSX" class="f4 fwb">&ndash;</p>
+              <p class="o9">Max Session</p>
+            </li>
+            <li class="mb4 c6">
+              <p id="jASDT" class="f4 fwb">&ndash;</p>
+              <p class="o9">Avg Session</p>
+            </li>
+            <li class="mb4 mb0-l c6">
+              <p id="jLPT" class="f4 fwb">&ndash;</p>
+              <p class="o9">Log Percentage</p>
+            </li>
+            <li class="mb4 mb0-l c6">
+              <p id="jFT" class="f4 fwb">&ndash;</p>
+              <p class="o9">Focus</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+
   </div>
 
   <div id="gui" class="dn sect wf r h9-l f6 lhc oya">
@@ -736,6 +746,7 @@
   <script src="js/vis.js"></script>
   <script src="js/time.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/journal.js"></script>
   <!-- <script src="js/test.js"></script> -->
 
   <script>
