Clean * Rewrote a bunch of things

--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,11 @@
           </thead>
           <tbody>
             <tr>
-              <td id="lastID"></td>
-              <td id="lastTime"></td>
-              <td id="lastSector"></td>
-              <td id="lastProject"></td>
-              <td id="lastDescription"></td>
+              <td id="leid"></td>
+              <td id="ltim"></td>
+              <td id="lsec"></td>
+              <td id="lpro"></td>
+              <td id="ldsc"></td>
             </tr>
           </tbody>
         </table>
@@ -73,35 +73,35 @@
 
         <ul class="mb4 lsn f6 lhc r">
           <li class="mb3 c6 c3-m c3-l">
-            <p id="LHT" class="f4 fwb">&ndash;</p>
+            <p id="tLHT" class="f4 fwb">&ndash;</p>
             <p class="o9">Logged Hours</p>
           </li>
           <li class="mb3 c6 c3-m c3-l">
-            <p id="LSN" class="f4 fwb">&ndash;</p>
+            <p id="tLSN" class="f4 fwb">&ndash;</p>
             <p class="o9">Min Session</p>
           </li>
           <li class="mb3 c6 c3-m c3-l">
-            <p id="LSX" class="f4 fwb">&ndash;</p>
+            <p id="tLSX" class="f4 fwb">&ndash;</p>
             <p class="o9">Max Session</p>
           </li>
           <li class="mb3 c6 c3-m c3-l">
-            <p id="ASDT" class="f4 fwb">&ndash;</p>
+            <p id="tASD" class="f4 fwb">&ndash;</p>
             <p class="o9">Avg Session</p>
           </li>
           <li class="mb3 mb0-l c6 c3-m c3-l">
-            <p id="LPT" class="f4 fwb">&ndash;</p>
+            <p id="tLPT" class="f4 fwb">&ndash;</p>
             <p class="o9">Log Percentage</p>
           </li>
           <li class="mb3 mb0-l c6 c3-m c3-l">
-            <p id="FOC" class="f4 fwb">&ndash;</p>
+            <p id="tFOC" class="f4 fwb">&ndash;</p>
             <p class="o9">Focus</p>
           </li>
           <li class="mb3 mb0-l c6 c3-m c3-l">
-            <p id="ENC" class="f4 fwb">&ndash;</p>
+            <p id="tENC" class="f4 fwb">&ndash;</p>
             <p class="o9">Entries</p>
           </li>
           <li class="mb3 mb0-l c6 c3-m c3-l">
-            <p id="STK" class="f4 fwb">&ndash;</p>
+            <p id="tSTK" class="f4 fwb">&ndash;</p>
             <p class="o9">Streak</p>
           </li>
         </ul>
@@ -109,9 +109,9 @@
 
       <div class="c2 hf-l f6 lhc">
         <h3 class="mb3 mt2 f5 fwn">Sectors</h3>
-        <ul id="sectorBars" class="nodrag lsn mb3 h4-l oya-l"></ul>
+        <ul id="secBars" class="nodrag lsn mb3 h4-l oya-l"></ul>
         <h3 class="mb3 f5 fwn">Projects</h3>
-        <ul id="projectBars" class="nodrag lsn h4-l oya-l"></ul>
+        <ul id="proBars" class="nodrag lsn h4-l oya-l"></ul>
       </div>
     </div>
   </div>
@@ -132,11 +132,11 @@
             <p class="o9">Logged Hours</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
-            <p id="LSNH" class="f4 fwb">&ndash;</p>
+            <p id="LNH" class="f4 fwb">&ndash;</p>
             <p class="o9">Min Session</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
-            <p id="LSXH" class="f4 fwb">&ndash;</p>
+            <p id="LXH" class="f4 fwb">&ndash;</p>
             <p class="o9">Max Session</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
@@ -144,7 +144,7 @@
             <p class="o9">Avg Session</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
-            <p id="ALHH" class="f4 fwb">&ndash;</p>
+            <p id="ALH" class="f4 fwb">&ndash;</p>
             <p class="o9">Daily Average</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
@@ -152,15 +152,15 @@
             <p class="o9">Log Percentage</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
-            <p id="entCount" class="f4 fwb">&ndash;</p>
+            <p id="EHC" class="f4 fwb">&ndash;</p>
             <p class="o9">Entries</p>
           </li>
           <li class="mb4 c6 c3-m c3-l">
-            <p id="secCount" class="f4 fwb">&ndash;</p>
+            <p id="SCC" class="f4 fwb">&ndash;</p>
             <p class="o9">Sectors</p>
           </li>
           <li class="mb4 mb0-l c6 c3-m c3-l">
-            <p id="proCount" class="f4 fwb">&ndash;</p>
+            <p id="PRC" class="f4 fwb">&ndash;</p>
             <p class="o9">Projects</p>
           </li>
           <li class="mb4 mb0-l c6 c3-m c3-l">
@@ -201,13 +201,13 @@
         </ul>
 
         <h3 class="mb3 f6 fwn">Sector Focus</h3>
-        <div id="sectorFocusBar" class="mb3 wf sh2"></div>
-        <ul id="sectorLegendSummary" class="lsn r"></ul>
+        <div id="secFocBar" class="mb3 wf sh2"></div>
+        <ul id="secLegSum" class="lsn r"></ul>
       </div>
 
       <div id="sec" class="dn subsect hf r">
         <div class="nodrag c9 hf-l oya-l">
-          <h2 id="sectorTitle" class="mb0 f4 lht">Sector</h2>
+          <h2 id="secTtl" class="mb0 f4 lht">Sector</h2>
           <p id="sectorLastUpdate" class="mb2 f6 o7"></p>
 
           <div class="mb3 lhc">
@@ -216,7 +216,7 @@
           </div>
 
           <div id="secStat" class="secsect hf">
-            <div id="sectorChart" class="psr h4 mb4"></div>
+            <div id="secChart" class="psr h4 mb4"></div>
 
             <ul class="mb5 lsn f6 lhc r">
               <li class="mb4 c6 c3-m c3-l">
@@ -224,11 +224,11 @@
                 <p class="o9">Logged Hours</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
-                <p id="sLSNH" class="f4 fwb">&ndash;</p>
+                <p id="sLNH" class="f4 fwb">&ndash;</p>
                 <p class="o9">Min Session</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
-                <p id="sLSXH" class="f4 fwb">&ndash;</p>
+                <p id="sLXH" class="f4 fwb">&ndash;</p>
                 <p class="o9">Max Session</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
@@ -240,7 +240,7 @@
                 <p class="o9">Entries</p>
               </li>
               <li class="mb4 mb0-l c6 c3-m c3-l">
-                <p id="sStreak" class="f4 fwb">&ndash;</p>
+                <p id="sSTK" class="f4 fwb">&ndash;</p>
                 <p class="o9">Streak</p>
               </li>
               <li class="mb4 mb0-l c6 c3-m c3-l">
@@ -255,14 +255,14 @@
 
             <h3 class="mb3 f6 fwn">Peaks</h3>
             <div class="dib mb4-l pr4-l lf h2 w5">
-              <div id="sPeakTimes" class="psr hf wf"></div>
+              <div id="sPKH" class="psr hf wf"></div>
             </div>
             <div class="dib mb4-l pl4-l lf h2 w5">
-              <div id="sPeakDays" class="psr hf wf"></div>
+              <div id="sPKD" class="psr hf wf"></div>
             </div>
 
             <h3 class="mb3 f6 fwn">Focus</h3>
-            <div id="sFocusChart" class="psr mb4 wf h1"></div>
+            <div id="sFoc" class="psr mb4 wf h1"></div>
 
             <ul class="mb4 lsn f6 lhc r">
               <li class="c6 c3-m c3-l">
@@ -280,32 +280,32 @@
             </ul>
 
             <h3 class="mb3 f6 fwn">Sector Focus</h3>
-            <div id="projectDetailFocus" class="mb3 wf sh2"></div>
-            <ul id="projectLegend" class="lsn r"></ul>
+            <div id="proFocDetail" class="mb3 wf sh2"></div>
+            <ul id="proLeg" class="lsn r"></ul>
           </div>
 
           <table id="secEnt" class="dn secsect wf bn">
             <thead>
               <tr class="f6 al">
-                <th class="pl0 fwn">ID</th>
+                <th class="fwn pl0">ID</th>
                 <th class="fwn">Date</th>
                 <th class="fwn">Time</th>
                 <th class="fwn">Duration</th>
                 <th class="fwn">Project</th>
-                <th class="pr0 fwn">Description</th>
+                <th class="fwn pr0">Description</th>
               </tr>
             </thead>
-            <tbody id="secLogbook" class="nodrag f6"></tbody>
+            <tbody id="secLog" class="nodrag f6"></tbody>
           </table>
         </div>
 
-        <ul id="sectorsList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
+        <ul id="secList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
       </div>
 
       <div id="pro" class="dn subsect hf r">
         <div class="nodrag c9 hf-l oya-l">
-          <h2 id="projectTitle" class="mb0 f4 lht">Project</h2>
-          <p id="projectLastUpdate" class="mb2 f6 o7"></p>
+          <h2 id="proTtl" class="mb0 f4 lht">Project</h2>
+          <p id="proLastUpdate" class="mb2 f6 o7"></p>
 
           <div class="mb3 lhc">
             <button id="b-proStat" class="pv1 protab on bg-cl of mr3" onclick="Log.tab('proStat', 'prosect', 'protab')">Statistics</button>
@@ -313,7 +313,7 @@
           </div>
 
           <div id="proStat" class="prosect hf">
-            <div id="projectChart" class="psr h4 mb4"></div>
+            <div id="proChart" class="psr h4 mb4"></div>
 
             <ul class="mb5 lsn f6 lhc r">
               <li class="mb4 c6 c3-m c3-l">
@@ -321,11 +321,11 @@
                 <p class="o9">Logged Hours</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
-                <p id="pLSNH" class="f4 fwb">&ndash;</p>
+                <p id="pLNH" class="f4 fwb">&ndash;</p>
                 <p class="o9">Min Session</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
-                <p id="pLSXH" class="f4 fwb">&ndash;</p>
+                <p id="pLXH" class="f4 fwb">&ndash;</p>
                 <p class="o9">Max Session</p>
               </li>
               <li class="mb4 c6 c3-m c3-l">
@@ -337,7 +337,7 @@
                 <p class="o9">Entries</p>
               </li>
               <li class="mb4 mb0-l c6 c3-m c3-l">
-                <p id="pStreak" class="f4 fwb">&ndash;</p>
+                <p id="pSTK" class="f4 fwb">&ndash;</p>
                 <p class="o9">Streak</p>
               </li>
               <li class="mb4 mb0-l c6 c3-m c3-l">
@@ -352,14 +352,14 @@
 
             <h3 class="mb4 f6 fwn">Peaks</h3>
             <div class="dib mb4-l pr4-l lf h2 w5">
-              <div id="pPeakTimes" class="psr hf wf"></div>
+              <div id="pPKH" class="psr hf wf"></div>
             </div>
             <div class="dib mb4-l pl4-l lf h2 w5">
-              <div id="pPeakDays" class="psr hf wf"></div>
+              <div id="pPKD" class="psr hf wf"></div>
             </div>
 
             <h3 class="mb4 f6 fwn">Focus</h3>
-            <div id="pFocusChart" class="psr mb4 wf h1"></div>
+            <div id="pFoc" class="psr mb4 wf h1"></div>
 
             <ul class="mb5 lsn f6 lhc r">
               <li class="c6 c3-m c3-l">
@@ -377,8 +377,8 @@
             </ul>
 
             <h3 class="mb4 f6 fwn">Sector Focus</h3>
-            <div id="sectorDetailFocus" class="mb3 wf sh2"></div>
-            <ul id="sectorLegend" class="lsn r"></ul>
+            <div id="secFocDetail" class="mb3 wf sh2"></div>
+            <ul id="secLeg" class="lsn r"></ul>
           </div>
 
           <table id="proEnt" class="dn prosect wf bn">
@@ -392,11 +392,11 @@
                 <th class="pr0 fwn">Description</th>
               </tr>
             </thead>
-            <tbody id="proLogbook" class="nodrag f6"></tbody>
+            <tbody id="proLog" class="nodrag f6"></tbody>
           </table>
         </div>
 
-        <ul id="projectsList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
+        <ul id="proList" class="nodrag c3 pl4-l hf-l oya-l lsn f6 lhc"></ul>
       </div>
     </div>
   </div>
@@ -408,16 +408,14 @@
 
   <div id="tab" class="dn sect wf h9 oya">
     <table class="wf bn">
-      <thead>
-        <tr class="f6 al">
-          <th class="pl0 fwn">ID</th>
-          <th class="fwn">Date</th>
-          <th class="fwn">Time</th>
-          <th class="fwn">Duration</th>
-          <th class="fwn">Sector</th>
-          <th class="fwn">Project</th>
-          <th class="pr0 fwn">Description</th>
-        </tr>
+      <thead class="f6 al">
+        <th class="pl0 fwn">ID</th>
+        <th class="fwn">Date</th>
+        <th class="fwn">Time</th>
+        <th class="fwn">Duration</th>
+        <th class="fwn">Sector</th>
+        <th class="fwn">Project</th>
+        <th class="pr0 fwn">Description</th>
       </thead>
       <tbody id="logbook" class="nodrag f6"></tbody>
     </table>
@@ -474,7 +472,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <div id="gui" class="dn sect wf r h9-l f6 lhc oya">
@@ -750,21 +747,21 @@
   <!-- <script src="js/test.js"></script> -->
 
   <script>
-    const {dialog, app} = require('electron').remote
-    const fs = require('fs')
+    const {dialog, app} = require('electron').remote;
+    const fs = require('fs');
     // const ipcRenderer = require('electron').ipcRenderer
-    const Store = require('./js/store.js')
-    const path = require('path')
+    const Store = require('./js/store.js');
+    const path = require('path');
 
-    ver.innerHTML = app.getVersion()
+    ver.innerHTML = app.getVersion();
 
-    let dataPath = ''
+    let dataPath = '';
 
     if (localStorage.hasOwnProperty('logDataPath')) {
-      dataPath = localStorage.getItem('logDataPath')
+      dataPath = localStorage.getItem('logDataPath');
     } else {
-      dataPath = `${app.getPath('appData')}/log-data.json`
-      localStorage.setItem('logDataPath', dataPath)
+      dataPath = `${app.getPath('appData')}/log-data.json`;
+      localStorage.setItem('logDataPath', dataPath);
     }
 
     const dataStore = new Store({
@@ -772,40 +769,43 @@
       defaults: {
         config: {
           ui: {
-            bg: "#f8f8f8",
-            colour: "#202020",
-            accent: "#eb4e32",
+            bg: '#f8f8f8',
+            colour: '#202020',
+            accent: '#eb4e32',
             colourMode: 'sector',
-            font: "sans-serif",
+            font: 'sans-serif',
             view: 28,
             tableView: 50
           },
           system: {
-            calendar: "gregorian",
-            timeFormat: "24"
+            calendar: 'gregorian',
+            timeFormat: '24'
           }
         },
         palette: {},
         projectPalette: {},
         log: []
       }
-    })
+    });
 
-    var user = {
+    let user = {
       config: dataStore.get('config'),
       palette: dataStore.get('palette'),
       projectPalette: dataStore.get('projectPalette'),
       log: dataStore.get('log')
     }
 
-    Log.path = dataStore.path
+    Log.path = dataStore.path;
 
-    Log.init()
+    // 1839.73 ms
+    console.time('Log')
+    Log.init();
+    console.timeEnd('Log')
 
-    dataStore.set('config', user.config)
-    dataStore.set('palette', user.palette)
-    dataStore.set('projectPalette', user.projectPalette)
-    dataStore.set('log', user.log)
+    dataStore.set('config', user.config);
+    dataStore.set('palette', user.palette);
+    dataStore.set('projectPalette', user.projectPalette);
+    dataStore.set('log', user.log);
   </script>
 </body>
 </html>
