∗ Fix meter lines not displaying

--- a/src/index.html
+++ b/src/index.html
@@ -968,6 +968,10 @@
 
     Log.path = dataStore.path;
 
+    Log.vis.meterLines(ovwMeter);
+    Log.vis.meterLines(visMeter);
+    Log.vis.meterLines(jMeter);
+
     // 1839.73 ms
     Log.init();
 
