--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
 
   <div id="container" class="hf">
     <header id="topbar" class="mb2 f6 lhc">
-      <h1 class="dib mr3 f5 upc tk">Log</h1>
+      <h1 class="dib mr3 f5 upc tk" id="thom">Log</h1>
       <button id="b-ovw" class="pv1 tab on bg-cl of mr3" onclick="Log.tab('ovw', 'sect', 'tab')">Overview</button>
       <button id="b-lis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('lis', 'sect', 'tab')">Details</button>
       <button id="b-vis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('vis', 'sect', 'tab')">Visualisation</button>
